# c-raylib-game

./: .gitignore  CMakeLists.txt  defs.h  input.h  main.c  player.c  player.h  world.h
resources/: map.json  penguin.kra  penguin.kra~  penguin.png~
src/: defs.h  input.c  input.h  main.c  player.c  player.h  tilemap.c  tilemap.h  world.c
src/enemy/: enemy.c  enemy.h
src/level/: tilemap.c  world.c
src/player/: player.c  player.h  player_combat.c  player_combat.h  player_movement.c  player_movement.h  player_sprite.c  player_sprite.h
src/sprite/: sprite.h
tiled/: map.json  map.tmx  map_project.tiled-session  tileset_01.tsx
